# AgentGym

./: README-TEXTCRAFT-STRUCTURE.md  README-TPLX.md  README.md
agentenv/: pyproject.toml
agentenv-alfworld/: setup.sh
agentenv-alfworld/agentenv_alfworld/: env_wrapper.py
agentenv-babyai/agentenv_babyai/: environment.py  model.py  server.py
agentenv-ded/agentenv_ded/: __init__.py  environment.py  launch.py  (+3 more)
agentenv-searchqa/: README.md  environment.yml  pyproject.toml  setup.sh
agentenv-searchqa/agentenv_searchqa/: env_wrapper.py  launch.py  model.py  retriever.py  server.py  utils.py
agentenv-searchqa/agentenv_searchqa/reward_score/: __init__.py  qa_em.py  qa_em_format.py
agentenv-searchqa/scripts/: download.py
agentenv-searchqa/scripts/data_process/: nq_search.py  qa_search_test_merge.py  qa_search_train_merge.py
agentenv-webarena/: README.md  pyproject.toml  setup.sh
agentenv-webarena/agentenv_webarena/: __init__.py  environment.py  launch.py  server.py
agentenv-webarena/webarena/browser_env/: actions.py  auto_login.py  envs.py  processors.py
agentenv-webarena/webarena/evaluation_harness/: helper_functions.py
agentenv-webarena/webarena/llms/providers/: openai_utils.py
agentenv-webshop/: setup.sh
agentenv/agentenv/controller/: __init__.py  agent.py  env.py  task.py  types.py  utils.py
agentenv/agentenv/envs/: __init__.py  academia.py  alfworld.py  babyai.py  ded.py  lmrlgym.py  movie.py  sciworld.py  searchqa.py  sheet.py  sqlgym.py  textcraft.py  todo.py  weather.py  webarena.py  webshop.py
agentenv/examples/basic/: base_eval.py  base_eval.sh  base_eval_launch_from_python.py  openai_eval.py  openai_eval_launch_from_python.py  openai_eval_multiprocessing.py  openai_eval_multiprocessing_launch_from_python.py
env-visualization/: README.md  package-lock.json  package.json  vite.config.js
(+75 files in other folders)
